# axium

./: package.json  svelte.config.js  vite.config.js
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ws.rs
src/lib/components/axium/: about.svelte  api.ts  logo.svelte
src/lib/components/axium/context/: context.svelte  context.ts  index.ts
src/lib/components/axium/draggable-tooltip/: constants.ts  content.svelte  context.ts  exports.ts  handle.svelte  index.ts  root.svelte
src/lib/components/axium/explorer/: constants.ts  context.ts  file.svelte  folder.svelte  index.ts  root.svelte  types.ts
src/lib/components/axium/file-tab/: context.ts  exports.ts  index.ts  root.svelte  tab.svelte
src/lib/components/axium/io/: root.svelte
src/lib/components/axium/nav-menu/: exports.ts  gradient-1.svelte  index.ts  menu.svelte
src/lib/components/axium/node-editor/: exports.ts  index.ts  root.svelte  select-field.svelte  test.svelte
src/lib/components/axium/sidebar/: index.ts
src/lib/components/axium/size-observer/: size-observer.svelte
src/lib/components/ui/alert-dialog/: alert-dialog-title.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/menubar/: menubar-item.svelte  menubar-trigger.svelte  menubar.svelte
src/routes/: +layout.svelte  +page.svelte  test.ts
src/routes/workspace/: +page.svelte
